--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Tenpoint Builders & Remodelers, Ltd.</title>
         <meta name="description" content="Tenpoint Builders & Remodelers - Serving Northeast Ohio since 1995">
@@ -57,7 +58,7 @@
 
         Phone: <a href="tel:440-777-1456">440-777-1546</a><br>
 
-        Send us an e-mail: <a href="mailto:Tenpointbuilders@hotmail.com">tenpointbuilders@hotmail.com</a>
+        Send us an e-mail:<br><a href="mailto:Tenpointbuilders@hotmail.com">tenpointbuilders@hotmail.com</a>
         </div>
         <div class="col-2">
         Hours<br>
